tests/NormalTests/paczka1/small_fuzzy/46502262.err
Error in line 3: nb5s6kanquJ S1 2,7
Error in line 7: SL3U2TWZ S1 11,9
Error in line 11: SL3U2TWZ A533 23,5
